--- a/conf/config.properties
+++ b/conf/config.properties
@@ -29,5 +29,8 @@ fm.static.value.cache=com.bt.om.cache.CacheHelper
 
 
 commission.get.url=http://tae.xmluren.com/tae/shop
+commission.product.size=100
+
+is.sms.send=off
 
 is_test_evn=on
