--- a/conf/config.properties
+++ b/conf/config.properties
@@ -31,6 +31,9 @@ fm.static.value.cache=com.bt.om.cache.CacheHelper
 commission.get.url=http://tae.xmluren.com/tae/shop
 commission.product.size=100
 
+selenium.drive.name=webdriver.gecko.driver
+selenium.drive.path=.\\conf\\tools\\geckodriver.exe
+
 crawl.task.send.url=https://plug.guangfish.com/api/crawl/addtask
 crawl.task.fetch.url=https://plug.guangfish.com/api/crawl/fetchtask
 
