--- a/conf/config.properties
+++ b/conf/config.properties
@@ -37,6 +37,8 @@ selenium.drive.path=.\\conf\\tools\\geckodriver.exe
 crawl.task.send.url=https://plug.guangfish.com/api/crawl/addtask
 crawl.task.fetch.url=https://plug.guangfish.com/api/crawl/fetchtask
 
+task.info.check.num=20
+
 is.sms.send=off
 
 is_test_evn=on
