--- a/conf/config.properties
+++ b/conf/config.properties
@@ -39,6 +39,8 @@ crawl.task.fetch.url=https://plug.guangfish.com/api/crawl/fetchtask
 
 task.info.check.num=25
 
+commission.rate=60
+
 is.sms.send=off
 
 is_test_evn=on
