--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -2,7 +2,7 @@
 
 log4j.rootLogger=info,stdout
 log4j.logger=info,flow
-log4j.logger.com.bt.om.mapper =DEBUG,flow
+log4j.logger.com.bt.om.mapper =info,flow
 log4j.additivity.com.bt.om.mapper =true
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -15,15 +15,15 @@ log4j.appender.flow.DatePattern='.'yyyy-MM-dd
 log4j.appender.flow.layout=org.apache.log4j.PatternLayout
 log4j.appender.flow.layout.ConversionPattern=%d{yyyy-MM-dd HH\:mm\:ss,SSS} %5p [%t] (%F\:%L) - %m%n
 
-log4j.logger.com.ibatis=DEBUG
-log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG
-log4j.logger.com.ibatis.common.jdbc.ScriptRunner=DEBUG
-log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
+log4j.logger.com.ibatis=info
+log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=info
+log4j.logger.com.ibatis.common.jdbc.ScriptRunner=info
+log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=info
    
-log4j.logger.java.sql.Connection=DEBUG
-log4j.logger.java.sql.Statement=DEBUG
-log4j.logger.java.sql.PreparedStatement=DEBUG
-log4j.logger.java.sql.ResultSet=DEBUG
+log4j.logger.java.sql.Connection=info
+log4j.logger.java.sql.Statement=info
+log4j.logger.java.sql.PreparedStatement=info
+log4j.logger.java.sql.ResultSet=info
   
 log4j.logger.org.springframework=INFO
 log4j.logger.org.compass=ERROR 
