--- a/conf/config.properties
+++ b/conf/config.properties
@@ -27,6 +27,8 @@ fm.static.value.date=com.bt.om.util.DateUtil
 fm.static.key.cache=cacheHelper
 fm.static.value.cache=com.bt.om.cache.CacheHelper
 
+project.allow.access.domain=http://help.guangfish.com,https://help.guangfish.com
+
 
 commission.get.url=http://tae.xmluren.com/tae/shop
 commission.product.size=100
