--- a/conf/config.properties
+++ b/conf/config.properties
@@ -35,13 +35,15 @@ commission.product.size=100
 selenium.drive.name=webdriver.gecko.driver
 selenium.drive.path=.\\conf\\tools\\geckodriver.exe
 
-crawl.task.send.url=https://plug.guangfish.com/api/crawl/addtask
-crawl.task.fetch.url=https://plug.guangfish.com/api/crawl/fetchtask
+crawl.task.send.domain=https://plug.guangfish.com
+crawl.task.send.domain.test=http://localhost:8082
+crawl.task.send.url=/api/crawl/addtask
+crawl.task.fetch.url=/api/crawl/fetchtask
 
 task.info.check.num=25
 
 commission.rate=0.6
 
-is.sms.send=off
+is.sms.send=on
 
 is_test_evn=on
