--- a/conf/config.properties
+++ b/conf/config.properties
@@ -27,10 +27,17 @@ fm.static.value.date=com.bt.om.util.DateUtil
 fm.static.key.cache=cacheHelper
 fm.static.value.cache=com.bt.om.cache.CacheHelper
 
+monitor.email.send.status=on
+monitor.email.from=aineness@163.com
+monitor.email.from.host=smtp.163.com
+monitor.email.from.account=aineness
+monitor.email.from.password=chj330
+#more emailto split by ; 
+monitor.email.to=13732203065@139.com
 
 
 commission.get.url=http://tae.xmluren.com/tae/shop
-commission.product.size=100
+commission.product.size=48
 
 selenium.drive.name=webdriver.gecko.driver
 selenium.drive.path=.\\conf\\tools\\geckodriver.exe
